// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label exists with string 1`] = `
Array [
  "[1m[91m x Label[1m[96m todo [39m[91m[22m[1malready exists![39m[22m",
]
`;

exports[`label exists without string 1`] = `
Array [
  "[1m[91m x Label already exists![39m[22m",
]
`;

exports[`login  failed 1`] = `
Array [
  "",
  "[91mLogin failed![39m Please try again.",
]
`;

exports[`repo not found with string 1`] = `
Array [
  "",
  "[1m[91mRepository[1m[96m bradgarropy/labman-cli [39m[91m[22m[1mdoes not exist![39m[22m",
]
`;

exports[`repo not found without string 1`] = `
Array [
  "",
  "[1m[91mRepository does not exist![39m[22m",
]
`;

exports[`token invalid 1`] = `
Array [
  "",
  "[91mInvalid token![39m Please run the [96mlogin[39m command again.",
  "",
  "[96mlabman login <username> <token>[39m",
]
`;

exports[`token not found 1`] = `
Array [
  "",
  "You are not logged in, please run the [96mlogin[39m command.",
  "",
  "[96mlabman login <username> <token>[39m",
]
`;
